--- a/Hibernate_learning/pom.xml
+++ b/Hibernate_learning/pom.xml
@@ -11,11 +11,20 @@
   	<properties>
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
 		<junit.version>4.12</junit.version>
-		<hibernate.version>5.1.0.Final</hibernate.version>
+		<hibernate.version>5.2.0.Final</hibernate.version>
 	</properties>
   
   
   <dependencies>
+  
+  <!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
+  
   
   		<dependency>
 			<groupId>org.hibernate</groupId>
