--- a/Hibernate_learning/pom.xml
+++ b/Hibernate_learning/pom.xml
@@ -12,6 +12,8 @@
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
 		<junit.version>4.12</junit.version>
 		<hibernate.version>5.2.0.Final</hibernate.version>
+		   <maven.compiler.source>1.8</maven.compiler.source>
+          <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
   
   
